// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist renders correctly 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
        padding="checkbox"
        width={64}
      />
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Artist
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Album
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Muse
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The 2nd Law
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Pink Floyd
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The Division Bell
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Ride the Lightning
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Metallica
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist shows play button on hover 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
        padding="checkbox"
        width={64}
      />
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Artist
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Album
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Muse
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The 2nd Law
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Pink Floyd
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The Division Bell
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Ride the Lightning
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Metallica
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist shows play button on hover 2`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
        padding="checkbox"
        width={64}
      />
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Artist
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Album
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Muse
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The 2nd Law
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        align="center"
        padding="checkbox"
        width={64}
      >
        <WithStyles(IconButton)
          aria-label="Play Song"
          classes={
            Object {
              "root": "Playlist-iconButtonRoot-3",
            }
          }
          onClick={[Function]}
        >
          <pure(PlayCircleOutlineIcon)
            fontSize="medium"
          />
        </WithStyles(IconButton)>
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Pink Floyd
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The Division Bell
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Ride the Lightning
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Metallica
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist updates current song row background 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
        padding="checkbox"
        width={64}
      />
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Artist
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Album
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Muse
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The 2nd Law
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Pink Floyd
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The Division Bell
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Ride the Lightning
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Metallica
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist updates current song row background 2`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
        padding="checkbox"
        width={64}
      />
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Artist
      </WithStyles(TableCell)>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Album
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Muse
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The 2nd Law
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Pink Floyd
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        The Division Bell
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <WithStyles(TableCell)
        width={64}
      />
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Ride the Lightning
      </WithStyles(TableCell)>
      <WithStyles(TableCell)>
        Metallica
      </WithStyles(TableCell)>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;
